<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/work_entry_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:divider="@android:drawable/divider_horizontal_bright"
        android:gravity="center"
        android:orientation="vertical"
        android:showDividers="end">

        <TextView
            android:id="@+id/work_entry_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/label_work_entry"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/work_entry_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/work_entry_place"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/text_divider"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/work_entry_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/label_entry_individual"
                android:textAllCaps="true"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/work_entry_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="top|end"
            android:hapticFeedbackEnabled="false"
            android:text="@string/work_entry_date"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/work_entry_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="top|end"
                android:hapticFeedbackEnabled="false"
                android:text="@string/label_entry_time_start"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4sp"
                android:fontFamily="sans-serif-light"
                android:gravity="top|end"
                android:hapticFeedbackEnabled="false"
                android:text="@string/text_divider"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/work_entry_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="top|end"
                android:hapticFeedbackEnabled="false"
                android:text="@string/label_entry_time_end"
                android:textAllCaps="true"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>